<resources>
    <string name="app_name">E Medical RV</string>
    <string name="connection">Connection</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connect">connect</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">appointment@medicalassist.sn</string>
    <string name="presentation">Presentation</string>
    <string name="help">Help</string>
    <string name="back">Back</string>
    <string name="inscription">Inscription</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="error_fields">Required Field</string>
    <string name="error_parameters">Incorrect parameters</string>
    <string name="error_connection">Connection error</string>
    <string name="error_inscription">Inscription Failed</string>
    <string name="success_inscription">Inscription successful</string>
    <string name="welcome">Welcome</string>
    <string name="disconnect">Disconnect</string>
    <string name="wait">Please wait</string>
    <string name="mydashboard">MY Dashbord</string>
    <string name="patient">Patient</string>
    <string name="rdv">Appointment</string>
    <string name="consultation">Consultations</string>
    <string name="hospital">Hospital</string>
    <string name="modif_appointment">Modify Appointment</string>
    <string name="create_appointment">Create Appointment</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_place">Appointment Place</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="consultation_date">Date (Year-Month-Day)</string>
    <string name="consultation_place">Place</string>
    <string name="consultation_time">Time (h:mn:ss)</string>
    <string name="symptoms">Symptoms</string>
    <string name="temperature">Temperature</string>
    <string name="headache">Headache</string>
    <string name="stomachache">Stomachache</string>
    <string name="distress">Distress</string>
    <string name="cough">Cough</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="vomit">Vomit</string>
    <string name="consult_patient">Consult Patient</string>
    <string name="list_app">Appointments list</string>
    <string name="create_cons">Consultation</string>
    <string name="list_cons">Consultation list</string>

</resources>