<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/dim_all"
    tools:context=".MainActivity">

    <ImageView
        android:src="@drawable/logvert"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="200dp"
        >
    </ImageView>


    <TextView
        android:textStyle="bold"
        android:textSize="@dimen/dim_title"
        android:layout_marginTop="@dimen/dim_top"
        android:gravity="center"
        android:text="@string/connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </TextView>

    <EditText

        android:id="@+id/txtLogin"
        android:hint="@string/login"
        android:layout_marginTop="@dimen/dim_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </EditText>

    <EditText
        android:inputType="textPassword"
        android:id="@+id/txtPassword"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/dim_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </EditText>

    <Button
        android:layout_marginRight="@dimen/dim_right"
        android:layout_marginLeft="@dimen/dim_left"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBluePrimary"
        android:id="@+id/btnConnect"
        android:text="@string/connect"
        android:layout_marginTop="@dimen/dim_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </Button>

    <Button
        android:layout_marginRight="@dimen/dim_right"
        android:layout_marginLeft="@dimen/dim_left"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/btnSignUp"
        android:text="@string/sign_up"
        android:layout_marginTop="@dimen/dim_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </Button>


</LinearLayout>