<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dim_all"
    tools:context=".CreateRdvActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:src="@drawable/logo_agenda_medical"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="200dp"
            >
        </ImageView>

        <TextView
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dim_top"
            android:textSize="@dimen/dim_title"
            android:gravity="center"
            android:text="@string/create_appointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </TextView>

        <EditText
            android:id="@+id/txtFirstName"
            android:hint="@string/first_name"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </EditText>

        <EditText
            android:id="@+id/txtLastName"
            android:hint="@string/last_name"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </EditText>

        <EditText
            android:id="@+id/txtService"
            android:hint="Service"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </EditText>

        <EditText
            android:id="@+id/txtDoctor"
            android:hint="Doctor"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </EditText>

        <EditText
            android:id="@+id/txtDate"
            android:hint="@string/consultation_date"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </EditText>


        <EditText
            android:id="@+id/txtTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_top"
            android:hint="@string/consultation_time"></EditText>

        <Button
            android:textColor="@color/colorDarkBlue"
            android:id="@+id/btnSave"
            android:background="@color/colorAqua"
            android:gravity="center"
            android:text="@string/save"
            android:layout_marginTop="@dimen/dim_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </Button>


    </LinearLayout>

</ScrollView>