<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color"
    tools:context=".AcceuilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mydashboard"
            android:textSize="30sp"
            android:textColor="@color/colorAccent"
            android:layout_margin="20dp">
        </TextView>

        <GridLayout
            android:layout_width="343dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:rowCount="3">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:id="@+id/a_presentation"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/logo_msas"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="serif"
                        android:text="@string/presentation"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="18dp">

                    </TextView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:id="@+id/a_appointment"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/ob"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="serif"
                        android:text="@string/rdv"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="18dp">

                    </TextView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:id="@+id/a_consultation"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/im8">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="serif"
                        android:text="@string/consultation"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="18dp">

                    </TextView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:id="@+id/a_patient"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/person">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="serif"
                        android:text="@string/patient"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="18dp">

                    </TextView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:id="@+id/a_hospital"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/hospital">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="serif"
                        android:text="@string/hospital"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="18dp">

                    </TextView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:id="@+id/a_help"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/help"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="serif"
                        android:text="@string/help"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="18dp">

                    </TextView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </GridLayout>


    </LinearLayout>
</ScrollView>